# ChangeLog for media-sound/mpd
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-sound/mpd/ChangeLog,v 1.169 2009/05/20 19:42:24 ssuominen Exp $

  20 May 2009; Samuli Suominen <ssuominen@gentoo.org> mpd-0.15_beta2.ebuild:
  Raise libsidplay once more to get LDPATH for resid builders.

  20 May 2009; Samuli Suominen <ssuominen@gentoo.org> mpd-0.14.2.ebuild:
  Database update warning by Oliver Schinagl wrt #265663.

  20 May 2009; Samuli Suominen <ssuominen@gentoo.org> mpd-0.15_beta2.ebuild:
  append-ldflags "-L/usr/$(get_libdir)/sidplay/builders" to be sure the
  correct libraries are found for libsidplay.

  17 May 2009; Raúl Porcel <armin76@gentoo.org> mpd-0.14.2.ebuild:
  arm/sh/sparc stable wrt #262680

*mpd-0.15_beta2 (15 May 2009)

  15 May 2009; Samuli Suominen <ssuominen@gentoo.org>
  -files/0.15_beta1-mpdconf.patch, -mpd-0.15_beta1.ebuild,
  +files/0.15_beta2-mpdconf.patch, +mpd-0.15_beta2.ebuild:
  Version bump.

*mpd-0.15_beta1 (15 May 2009)

  15 May 2009; Samuli Suominen <ssuominen@gentoo.org>
  -files/0.15_alpha1-mpdconf.patch, -mpd-0.15_alpha1.ebuild,
  +files/0.15_beta1-mpdconf.patch, +mpd-0.15_beta1.ebuild,
  metadata.xml:
  Version bump wrt #268881.

  13 May 2009; Samuli Suominen <ssuominen@gentoo.org>
  mpd-0.15_alpha1.ebuild:
  Raise libsidplay dep to 2.1.1-r1 wrt #268872.

  14 Apr 2009; Christoph Mende <angelos@gentoo.org>
  +files/0.14.2-mpdconf.patch, +files/0.15_alpha1-mpdconf.patch,
  +files/0.13.2-mpdconf.patch, -files/mpdconf.patch, -files/mpdconf1.patch,
  mpd-0.13.2.ebuild, mpd-0.14.2.ebuild, mpd-0.15_alpha1.ebuild:
  Fixed $S and mpdconf.patch

*mpd-0.15_alpha1 (14 Apr 2009)

  14 Apr 2009; Christoph Mende <angelos@gentoo.org> metadata.xml,
  mpd-0.14.2.ebuild, +mpd-0.15_alpha1.ebuild:
  Version bump

  03 Apr 2009; Joseph Jezak <josejx@gentoo.org> mpd-0.14.2.ebuild:
  Marked ppc64 stable for bug #262680.

  27 Mar 2009; Christoph Mende <angelos@gentoo.org> metadata.xml,