@@ -1,6 +1,10 @@
 # ChangeLog for media-sound/mpd
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/mpd/ChangeLog,v 1.169 2009/05/20 19:42:24 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/mpd/ChangeLog,v 1.170 2009/05/22 11:49:36 ssuominen Exp $
+
+  22 May 2009; Samuli Suominen <ssuominen@gentoo.org> mpd-0.15_beta2.ebuild:
+  Doxygen doesn't do much of anything in this beta release wrt #270812,
+  thanks to Emil Karlson.
 
   20 May 2009; Samuli Suominen <ssuominen@gentoo.org> mpd-0.15_beta2.ebuild:
   Raise libsidplay once more to get LDPATH for resid builders.
